@@ -48,7 +48,7 @@ A simple example program:
  # sample html output
  print <<edoc
  <div>
-   <img src="#{response.image_url}"><br/>
+   <img src="#{response.image.url}"><br/>
    #{response.condition.temp} degrees #{response.units.temperature}<br/>
    #{response.condition.text}<br>
    Forecast:<br/>
