@@ -42,9 +42,10 @@ class TestAPI < Test::Unit::TestCase
   def _assert_valid_response (response, request_location, units, city, region, country)
     assert_not_nil response
 
-    # check the request location and url explicitly against what we know they should be
+    # check the request location and url explicitly against what we
+    # know they should be
     assert_equal response.request_location, request_location
-    assert_equal response.request_url, "http://xml.weather.yahoo.com/forecastrss?p=#{request_location}&u=#{units}"
+    assert_equal response.request_url, "http://weather.yahooapis.com/forecastrss?p=#{request_location}&u=#{units}"
 
     # check the astronomy info
     assert_instance_of YahooWeather::Astronomy, response.astronomy
@@ -66,7 +67,7 @@ class TestAPI < Test::Unit::TestCase
     assert(response.wind.chill <= response.condition.temp)
     assert_kind_of Numeric, response.wind.direction
     assert_kind_of Numeric, response.wind.speed
-    
+
     # check the atmosphere info
     assert_instance_of YahooWeather::Atmosphere, response.atmosphere
     assert_kind_of Numeric, response.atmosphere.humidity
@@ -95,21 +96,21 @@ class TestAPI < Test::Unit::TestCase
       assert(forecast.text && forecast.text.length > 0)
       _assert_valid_weather_code forecast.code
     end
-    
+
     # check the basic attributes
     assert(response.description && response.description.length > 0)
-    assert(response.image_url =~ /yimg\.com/)
+    assert(response.image.url =~ /yimg\.com/)
     assert_kind_of Numeric, response.latitude
     assert_kind_of Numeric, response.longitude
     assert(response.page_url =~ /\.html$/)
     assert(response.title && response.title.length > 0)
-    assert_not_nil (response.title.index("#{response.location.city}, #{response.location.region}"))
+    assert_not_nil(response.title.index("#{response.location.city}, #{response.location.region}"))
   end
-    
+
   def _assert_valid_weather_code (code)
     (((code >= 0) && (code <= 47)) || (code == 3200))
   end
-  
+
   def _assert_valid_units (units, fahrenheit_based)
     assert_instance_of YahooWeather::Units, units
     if fahrenheit_based
